--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.android.gms:play-services:11.8.0'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation "com.google.android.gms:play-services-location:11.8.0"
 }
